refactor(api+core+start): Controller 分层红线收口 + 两项包归位
按 doc/HelloAI_CODE_STYLE.md §6.3 第 1 条「禁止注入 Mapper」与第 2 条
「禁止书写 SQL/QueryWrapper 条件」收口 6 个历史违规 Controller：

  ActivityController / AdminDashboardController / AgentDutyLeaseController
  / AttachmentController / DashboardController / FeedController

删除 Mapper 注入、改为构造器注入 Service、查询与 QueryWrapper 全部下移至
对应 Service 新增方法：

  ActivityLogService          (list / record)
  AdminDashboardService       (getOverview / listBlockedHighlight /
                               listReviewHighlight / listLowActivityAgents /
                               getTrends)
  AgentDutyLeaseService       (getAgentNamesByIds 增量，去原 N+1)
  AttachmentService           (list / getByIdRequired / getStorageUrlRequired)
  DashboardService            (getStats)
  FeedService                 (listActivityLogs / resolveAgentNames /
                               listAgentSummaries)

包归位（git mv 保留历史）：

  - com.helloai.config.MyBatisPlusMetaObjectHandler
      -> com.helloai.start.config.MyBatisPlusMetaObjectHandler
  - com.helloai.config.AdminInitializer
      -> com.helloai.start.config.AdminInitializer
  - helloai-start/.../start/chat/DeepSeekProviderChatClientFactory
      -> helloai-core/.../core/agent/chat/provider/DeepSeekProviderChatClientFactory

依赖补齐：helloai-core/pom.xml 新增 spring-ai-starter-model-deepseek，
DeepSeekProviderChatClientFactory 迁入 core 后必须直接依赖该 starter
才能解析 org.springframework.ai.deepseek.* 类（Spring AI BOM 已 import，
无需指定版本）。

文档同步：

  - doc/HelloAI_CODE_STYLE.md
      §6.3 Controller 职责边界：删除「当前待收口清单 6 个」，
        替换为「收口完成」陈述 + 对应 6 个 Service 列表
      §3.x start 模块配置类归属：去掉「（待收口）」标记，
        改为陈述句描述已收口事实
  - doc/HelloAI_实现差距表.md
      §4 新增 N15「Controller 分层红线收口（§6.3 + 3.x 包归位）」
      §6 本轮文档治理结论补 2026-07-20 架构治理增量
  - doc/log/HelloAI_迭代执行记录.md
      新增「2026-07 Controller 分层红线收口（§6.3 + 3.x 包归位）」章节

验证：mvn -DskipTests clean compile，7 模块（helloai-common / helloai-mq /
helloai-core / helloai-job / helloai-api / helloai-start）全 SUCCESS，
hello